kubernetes/mysql-innodb-node.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-secondary
  namespace: rook-mysql
spec:
  selector:
    matchLabels:
      app: mysql
  serviceName: mysql-service
  replicas: 1
  template:
    metadata:
      labels:
        app: mysql
    spec:
      nodeSelector:
        mysql: slave
      containers:
        - name: mysql
          image: mysql:8.0
          args:
            - "--ignore-db-dir=lost+found"
          ports:
            - containerPort: 3306
          volumeMounts:
          - name: mysql-persistent-storage
            mountPath: /var/lib/mysql
          - name: conf
            mountPath: /etc/mysql
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
          livenessProbe:
            exec:
              command: ["mysqladmin", "ping"]
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
          readinessProbe:
            exec:
              # Check we can execute queries over TCP (skip-networking is off).
              command: ["mysql", "-h127.0.0.1", "-ureadiness", "-preadiness", "-e", "SELECT 1"]
            initialDelaySeconds: 5
            periodSeconds: 2
            timeoutSeconds: 1
        - name: xtrabackup
          image: percona/percona-xtrabackup:8.0
          ports:
            - containerPort: 3307
          command:
          - bash
          - "-c"
          - |
            [...]
          volumeMounts:
          - name: mysql-persistent-storage
            mountPath: /var/lib/mysql
          - name: config-volume
            mountPath: /etc/mysql
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-dynamic-pvc
      - name: config-volume
        emptyDir: {}
      - name: config-map
        configMap:
          name: mysql
      imagePullSecrets:
        - name: image-repo-secret
