kubernetes/mysql-innodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: rook-mysql
spec:
  ports:
  - name: mysql-service
    protocol: TCP
    port: 3306
  selector:
    app: mysql
  type: ClusterIP
