kubernetes/ingress-monitoring.yaml
#
# This example is for Kubernetes running an ngnix-ingress
# and an ACME (e.g. Let's Encrypt) certificate service
#
# The nginx-ingress annotations support the dashboard
# running using HTTPS with a self-signed certificate
#
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-monitoring-dashboard
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "nginx"
#    kubernetes.io/tls-acme: "true"
#    cert-manager.io/issuer: "ingress-monitoring-encrypt"
#    nginx.ingress.kubernetes.io/rewrite-target: /$2
#    nginx.ingress.kubernetes.io/auth-type: "basic"
#    nginx.ingress.kubernetes.io/auth-secret: "basic-auth"
#    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
#    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
#    nginx.ingress.kubernetes.io/server-snippet: |
#      proxy_ssl_verify off;
spec:
  tls:
    - hosts:
        - www.cyberfederal.base1.grafana
      secretName: ingress-monitoring-com-tls
  rules:
    - host: www.cyberfederal.base1.grafana
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000 
                  #name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-monitoring-alertcenter
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "nginx"
#    kubernetes.io/tls-acme: "true"
#    cert-manager.io/issuer: "ingress-monitoring-encrypt"
#    nginx.ingress.kubernetes.io/rewrite-target: /$2
#    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
#    nginx.ingress.kubernetes.io/server-snippet: |
#      proxy_ssl_verify off;
spec:
  tls:
    - hosts:
        - www.cyberfederal.base1.prometheus
        - www.cyberfederal.base1.alertmanager
      secretName: ingress-monitoring-com-tls
  rules:
    - host: www.cyberfederal.base1.prometheus
      http:
        paths:
          - path: / #/prometheus(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: prometheus-k8s
                port:
                  number: 9090
                  #name: web
    - host: www.cyberfederal.base1.alertmanager
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: alertmanager-main
                port:
                  number: 9093
                  #name: web
